overflow fix for bottom scroll bar

--- a/app/components/Header/style.css
+++ b/app/components/Header/style.css
@@ -33,6 +33,7 @@
   position: absolute;
   top: 2em;
   right: 3em;
+  overflow:hidden;
 }
 
 .icon {
